--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_web_sample">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    
    <application
         android:label="flutter_web_sample"
         android:name="${applicationName}"
